<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChannelActivity">

    <ImageView
        android:id="@+id/imageViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:color/background_light" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/channel_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/LowerTabText">

            <android.support.design.widget.TabItem
                android:id="@+id/channelTabItemVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_channel_tab_videos" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTabItemPlayLists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_channel_tab_playlists" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTabItemChannels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_channel_tab_channels" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTabItemAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_channel_tab_about" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/channels_container_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>
