<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wordpress.dnvsoft.youtubelite.VideoActivity">

    <com.wordpress.dnvsoft.youtubelite.views.LinearLayoutWithTouchListener
        android:id="@+id/layout_below_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <fragment
            android:id="@+id/youtube_fragment"
            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="false" />
    </com.wordpress.dnvsoft.youtubelite.views.LinearLayoutWithTouchListener>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_video_tab_description" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItemVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_video_tab_videos" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItemComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_video_tab_comments" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>
