<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewProfilePic"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_picture"
        app:srcCompat="@mipmap/profile_picture" />

    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageViewProfilePic"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="-15dp"
        android:layout_toEndOf="@+id/imageViewProfilePic"
        android:layout_toRightOf="@+id/imageViewProfilePic"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCommentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewProfileName"
        android:layout_alignStart="@+id/textViewProfileName"
        android:layout_below="@+id/textViewProfileName"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/layoutBelow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCommentText"
        android:layout_alignStart="@+id/textViewCommentText"
        android:layout_below="@+id/textViewCommentText"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutRatingButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewDislike"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/button_like"
                app:srcCompat="@drawable/dislike_button" />

            <TextView
                android:id="@+id/textViewLikeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/imageViewLike"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/button_dislike"
                app:srcCompat="@drawable/like_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRepliesCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:gravity="center_vertical"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonEditComment"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@mipmap/options_menu" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
